--- a/package.json
+++ b/package.json
@@ -33,5 +33,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "**/**/handlebars": "^4.5.3",
+    "**/**/set-value": "^3.0.1",
+    "**/**/lodash": "^4.17.2",
+    "**/**/mixin-deep": "^2.0.1",
+    "**/**/serialize-javascript": "^2.1.1"
   }
 }
